<resources>
    <string name="app_name">SuitmediaApp</string>
    <string name="name">Name</string>
    <string name="polindrome">Palindrome</string>
    <string name="check">CHECK</string>
    <string name="next">NEXT</string>
    <string name="isPalindrome">isPalindrome</string>
    <string name="notPalindrome">not palindrome</string>
    <string name="welcome">Welcome</string>
    <string name="nameUser">John Doe</string>
    <string name="selectUser">Selected User Name</string>
    <string name="choose">Choose a User</string>
    <string name="photo">Photo user</string>
    <string name="firstName">First Name Last Name</string>
    <string name="ex_email">EMAIL@EMAIL.COM</string>
    <string name="inputFirst">Input First</string>
    <string name="empty">No Data</string>
    <string name="second_screen">Second Screen</string>
    <string name="third_screen">Third Screen</string>
    <string name="input_name">Input Name first</string>
</resources>